optimize, add Quick Restoration Contract, fix bugs

--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -18,8 +18,12 @@
     <script src="../js/GF_logistics_html.js"></script>
     <script src="../js/GF_logistics_data.js"></script>
     <script src="../js/GF_logistics_Tab.js"></script>
+    <script src="../js/GF_logistics_Tab_Anytime.js"></script>
+    <script src="../js/GF_logistics_Tab_SingleTime.js"></script>
+    <script src="../js/GF_logistics_Tab_Timetable.js"></script>
+    <script src="../js/GF_logistics_Tab_Intervals.js"></script>
     <script src="../js/GF_logistics_Plan.js"></script>
-    <script src="../js/GF_logistics.js"></script>
+    <script src="../js/GF_logistics_main.js"></script>
 </head>
 
 <body>
@@ -291,41 +295,6 @@
                                     </p>
                                 </div>
                                 <div class="col-lg-5">
-                                    <h4>常用</h4>
-                                    <p>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(1)">手枪HG</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(2)">冲锋枪SMG</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(3)">步枪RF</button>
-                                    </p>
-                                    <p>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(4)">突击步枪AR</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(5)">机枪MG</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(6)">霰弹枪SG</button>
-                                    </p>
-                                    <p>
-                                        <button type="button" class="btn btn-default" onclick="setTarget(7)">均衡</button>
-                                        <button type="button" class="btn btn-default" onclick="setTarget(8)">人力</button>
-                                        <button type="button" class="btn btn-default" onclick="setTarget(9)">弹药</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(10)">口粮</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(11)">零件</button>
-                                    </p>
-                                    <p>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(12)">人形</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(13)">装备</button>
-                                        <button type="button" class="btn btn-default"
-                                            onclick="setTarget(14)">快建</button>
-                                        <button type="button" class="btn btn-danger" onclick="setTarget(15)">清零</button>
-                                    </p>
                                     <div class="row">
                                         <div class="col-lg-9" style="padding-right: 5px;" id="target"></div>
                                     </div>
