--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -21,9 +21,7 @@
     <script src="../js/GF_logistics_data.js"></script>
     <script src="../js/GF_logistics_Tab.js"></script>
     <script src="../js/GF_logistics_Tab_Anytime.js"></script>
-    <script src="../js/GF_logistics_Tab_SingleTime.js"></script>
     <script src="../js/GF_logistics_Tab_Timetable.js"></script>
-    <script src="../js/GF_logistics_Tab_Intervals.js"></script>
     <script src="../js/GF_logistics_Plan.js"></script>
     <script src="../js/GF_logistics_main.js"></script>
 </head>
@@ -93,19 +91,12 @@
                             <div class="panel-heading" id="setting"></div>
                             <div class="panel-body" style="padding-left: 5px; padding-right: 5px;">
                                 <div class="col-lg-7">
-                                    <h4 id="calculation_method"></h4>
-                                    <ul class="nav nav-pills nav-justified">
+                                    <ul class="nav nav nav-tabs nav-justified">
                                         <li class="active">
                                             <a href="#Tab_Anytime" id="tab_Anytime" data-toggle="tab"></a>
                                         </li>
                                         <li>
-                                            <a href="#Tab_SingleTime" id="tab_SingleTime" data-toggle="tab"></a>
-                                        </li>
-                                        <li>
                                             <a href="#Tab_Timetable" id="tab_Timetable" data-toggle="tab"></a>
-                                        </li>
-                                        <li>
-                                            <a href="#Tab_Intervals" id="tab_Intervals" data-toggle="tab"></a>
                                         </li>
                                     </ul>
                                     <div class="tab-content">
@@ -116,69 +107,32 @@
                                                     <div id="tab_Anytime_hourorday"></div>
                                                 </label>
                                             </div>
-                                            <h4 id="tab_Anytime_hours"></h4>
-                                            <div slider>
-                                                <div>
-                                                    <div inverse-left style="width:100%;"></div>
-                                                    <div range id="Tab_Anytime_range"
-                                                        style="left:0%;right:33.3333%;background-image: repeating-linear-gradient(-45deg, transparent, transparent 5px, rgba(252,252,252,0.08) 5px, rgba(252,252,252,0.08) 10px) !important;">
-                                                    </div>
-                                                    <span thumb id="Tab_Anytime_thumb"
-                                                        style="left:66.6666%; background-color:#CCC;"></span>
-                                                    <div sign id="Tab_Anytime_sign" style="left:66.6666%;">
-                                                        <span id="Tab_Anytime_sign_value">16</span>
-                                                    </div>
-                                                </div>
-                                                <input id="Tab_Anytime_Time" type="range" tabindex="0" value="16"
-                                                    max="24" min="0" step="0.25" oninput="
-                                                var value=(100/(parseFloat(this.max)-parseInt(this.min)))*parseFloat(this.value)-(100/(parseInt(this.max)-parseFloat(this.min)))*parseFloat(this.min);
-                                                var children = this.parentNode.childNodes[1].childNodes;
-                                                children[3].style.right=(100-value)+'%';
-                                                children[5].style.left=value+'%';
-                                                children[7].style.left=value+'%';
-                                                children[7].childNodes[1].innerHTML=this.value;" disabled="disabled" />
-                                            </div>
-                                        </div>
-                                        <div class="tab-pane fade" id="Tab_SingleTime">
-                                            <h4 id="tab_SingleTime_time"></h4>
-                                            <div class="row">
-                                                <div class="col-lg-6">
-                                                    <div class="form-group input-group">
-                                                        <input type="text" class="form-control"
-                                                            id="Time_SingleTime_hours" value=8 onclick="this.select()">
-                                                        <span class="input-group-addon" id="tab_SingleTime_hour"></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-6">
-                                                    <div class="form-group input-group">
-                                                        <input type="text" class="form-control"
-                                                            id="Time_SingleTime_minutes" value=0
-                                                            onclick="this.select()">
-                                                        <span class="input-group-addon"
-                                                            id="tab_SingleTime_minute"></span>
-                                                    </div>
-                                                </div>
+                                            <h4 id="tab_Anytime_time"></h4>
+                                            <div class="form-group input-group">
+                                                <input type="text" class="form-control"
+                                                    id="Time_Anytime_hours" value=16 onclick="this.select()">
+                                                <span class="input-group-addon"style="border-left-width: 0" id="tab_Anytime_hour"></span>
+                                                <input type="text" class="form-control" style="border-left-width: 0"
+                                                    id="Time_Anytime_minutes" value=0 onclick="this.select()">
+                                                <span class="input-group-addon"
+                                                    id="tab_Anytime_minute"></span>
                                             </div>
                                         </div>
                                         <div class="tab-pane fade" id="Tab_Timetable">
                                             <h4 id="tab_Timetable_time"></h4>
                                             <div class="row">
-                                                <div class="col-lg-5" style="padding-left: 10px; padding-right: 10px;">
+                                                <div class="col-lg-10">
                                                     <div class="form-group input-group">
                                                         <input type="text" class="form-control"
                                                             id="Time_Timetable_hours" value=5 onclick="this.select()">
-                                                        <span class="input-group-addon" id="tab_Timetable_hour"></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-5" style="padding-left: 10px; padding-right: 10px;">
-                                                    <div class="form-group input-group">
-                                                        <input type="text" class="form-control"
+                                                        <span class="input-group-addon"style="border-left-width: 0" id="tab_Timetable_hour"></span>
+                                                        <input type="text" class="form-control" style="border-left-width: 0"
                                                             id="Time_Timetable_minutes" value=0 onclick="this.select()">
                                                         <span class="input-group-addon"
                                                             id="tab_Timetable_minute"></span>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-2" style="padding-left: 10px; padding-right: 10px;">
+                                                <div class="col-lg-2" style="padding-left: 15px; padding-right: 10px;">
                                                     <button type="button" class="btn btn-default"
                                                         id="tab_Timetable_deleteall" title=""
                                                         onclick="Tab_Timetable_DeleteAllTimePoints()"><span
@@ -230,26 +184,6 @@
                                                 </label>
                                             </div>
                                         </div>
-                                        <div class="tab-pane fade" id="Tab_Intervals">
-                                            <h4 id="tab_Intervals_time"></h4>
-                                            <div class="row">
-                                                <div class="col-lg-6">
-                                                    <div class="form-group input-group">
-                                                        <input type="text" class="form-control"
-                                                            id="Time_Intervals_hours" value=3 onclick="this.select()">
-                                                        <span class="input-group-addon" id="tab_Intervals_hour"></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-lg-6">
-                                                    <div class="form-group input-group">
-                                                        <input type="text" class="form-control"
-                                                            id="Time_Intervals_minutes" value=0 onclick="this.select()">
-                                                        <span class="input-group-addon"
-                                                            id="tab_Intervals_minute"></span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
                                     </div>
                                     <h4 id="h4GreatSuccessRate"></h4>
                                     <div class="row">
@@ -271,52 +205,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <h4 id="h4timelimit"></h4>
-                                    <div slider>
-                                        <div>
-                                            <div inverse-left style="width:70%;"></div>
-                                            <div inverse-right style="width:70%;"></div>
-                                            <div range id="range_limit"
-                                                style="left:0%;right:0%;background-image: repeating-linear-gradient(-45deg, transparent, transparent 5px, rgba(252,252,252,0.08) 5px, rgba(252,252,252,0.08) 10px) !important;">
-                                            </div>
-                                            <span thumb id="thumb_limit_start" style="left:0%;"></span>
-                                            <span thumb id="thumb_limit_end" style="left:100%;"></span>
-                                            <div sign id="sign_limit_start" style="left:0%;">
-                                                <span id="sign_limit_start_value">0</span>
-                                            </div>
-                                            <div sign id="sign_limit_end" style="left:100%;">
-                                                <span id="sign_limit_end_value"></span>
-                                            </div>
-                                        </div>
-                                        <input id="Time_Limit_start" type="range" tabindex="0" value="0" max="0" min="0"
-                                            step="0.25" oninput="
-                                        this.value=Math.min(this.value,this.parentNode.childNodes[5].value-0.25);
-                                        var value=(100/(parseFloat(this.max)-parseInt(this.min)))*parseFloat(this.value)-(100/(parseInt(this.max)-parseFloat(this.min)))*parseFloat(this.min);
-                                        var children = this.parentNode.childNodes[1].childNodes;
-                                        children[1].style.width=value+'%';
-                                        children[5].style.left=value+'%';
-                                        children[7].style.left=value+'%';children[11].style.left=value+'%';
-                                        children[11].childNodes[1].innerHTML=this.value;" />
-                                        <input id="Time_Limit_end" type="range" tabindex="0" value="0" max="0" min="0"
-                                            step="0.25" oninput="
-                                        this.value=Math.max(this.value,this.parentNode.childNodes[3].value-(-0.25));
-                                        var value=(100/(parseFloat(this.max)-parseFloat(this.min)))*parseFloat(this.value)-(100/(parseFloat(this.max)-parseFloat(this.min)))*parseFloat(this.min);
-                                        var children = this.parentNode.childNodes[1].childNodes;
-                                        children[3].style.width=(100-value)+'%';
-                                        children[5].style.right=(100-value)+'%';
-                                        children[9].style.left=value+'%';children[13].style.left=value+'%';
-                                        children[13].childNodes[1].innerHTML=this.value;" />
-                                        <script>
-                                            var MissionsTimeMax = 0;
-                                            for (var i = 0; i < Q.length; i++) {
-                                                MissionsTimeMax = Math.max(MissionsTimeMax, Q[i][9]);
-                                            }
-                                            $("#sign_limit_end_value").html(MissionsTimeMax);
-                                            document.getElementById("Time_Limit_start").max = MissionsTimeMax;
-                                            document.getElementById("Time_Limit_end").max = MissionsTimeMax;
-                                            document.getElementById("Time_Limit_end").value = MissionsTimeMax;
-                                        </script>
-                                    </div>
                                     <h4 id="h4MapLimit"></h4>
                                     <p>
                                         <select class="form-control" id="MapLimit">
@@ -331,12 +219,13 @@
                                 </div>
                                 <div class="col-lg-5">
                                     <div class="row">
-                                        <div class="col-lg-9" style="padding-right: 5px;" id="target"></div>
+                                        <div class="col-lg-11" style="padding-right: 5px;" id="target"></div>
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
                                     <br>
-                                    <p><button type="button" class="btn btn-info" onclick="Get_Plan_Main()"
+                                    <p><button type="button" class="btn btn-primary" onclick="Get_Plan_Main()"
+                                            style="outline:none;"
                                             id="start_sortint"></button></p>
                                 </div>
                             </div>
