--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -109,6 +109,16 @@
                                                     id="Time_Anytime_minutes" value=0 onclick="this.select()">
                                                 <span class="input-group-addon" id="tab_Anytime_minute"></span>
                                             </div>
+                                            <h4 id="tab_Anytime_MinimumIntervalTime"></h4>
+                                            <div class="form-group input-group">
+                                                <input type="text" class="form-control" id="Tab_Anytime_MinimumIntervalTime_hours" value=0
+                                                    onclick="this.select()">
+                                                <span class="input-group-addon" style="border-left-width: 0"
+                                                    id="tab_Anytime_MinimumIntervalTime_hour"></span>
+                                                <input type="text" class="form-control" style="border-left-width: 0"
+                                                    id="Tab_Anytime_MinimumIntervalTime_minutes" value=0 onclick="this.select()">
+                                                <span class="input-group-addon" id="tab_Anytime_MinimumIntervalTime_minute"></span>
+                                            </div>
                                         </div>
                                         <div class="tab-pane fade" id="Tab_Timetable">
                                             <h4 id="tab_Timetable_time"></h4>
@@ -200,7 +210,9 @@
                                             <option value=8 id="chapter8"></option>
                                             <option value=9 id="chapter9"></option>
                                             <option value=10 id="chapter10"></option>
-                                            <option value=11 id="chapter11" selected></option>
+                                            <option value=11 id="chapter11"></option>
+                                            <option value=12 id="chapter12" selected></option>
+
                                         </select>
                                     </p>
                                     <div class="checkbox">
