--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -14,6 +14,7 @@
     <link href="../css/GF_logistics.css" rel="stylesheet">
     <script src="../vendor/jquery-v2.1.1/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../js/Quick_Sort_Expand.js"></script>
     <script src="../lang/languages.js"></script>
     <script src="../js/GF_logistics_localStorage.js"></script>
     <script src="../js/GF_logistics_loadHTML.js"></script>
