--- a/pages/GF_logistics.html
+++ b/pages/GF_logistics.html
@@ -14,6 +14,7 @@
     <link href="../css/GF_logistics.css" rel="stylesheet">
     <script src="../vendor/jquery-v2.1.1/jquery.min.js"></script>
     <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../js/GF_logistics_function.js"></script>
     <script src="../js/GF_logistics_input.js"></script>
     <script src="../js/Quick_Sort.js"></script>
     <script src="../lang/languages.js"></script>
@@ -261,6 +262,40 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h4 class="panel-title"><a data-toggle="collapse" id="MissionTableTitle" href="#MissionTable_panel" class="" aria-expanded="true"></a>
+                                </h4>
+                            </div>
+                            <div id="MissionTable_panel" class="panel-collapse collapse in" aria-expanded="true">
+                                <div class="panel-body" style="padding-left: 0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;">
+                                    <div class="table-responsive" style="max-height: 600px;">
+                                        <table class="table table-striped table-hover table-responsive text-nowrap table-sm" id="MissionTable">
+                                            <thead><tr><th>关卡</th><th>人力</th><th>弹药</th><th>口粮</th><th>零件</th><th>人形</th><th>装备</th><th>快建</th><th>快修</th><th>时间</th></tr></thead>
+                                            <tbody id="MissionTable_tbody">
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                                <tr><td>5-1</td><td>438</td><td>116</td><td>126</td><td>352</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1h</td></tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
